risolto problema lettera maiuscola

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ body{
     list-style-type: none;
     display: flex; 
 }
+.active {
+    background-color: lightgray;
+}
 /*/ comon  */
 
 /* COLUMN LEFT */
